cc: set_needs_update after dropping tile resources

PictureLayerImpl::ReleaseTileResources calls ResetRasterScale, meaning
it needs UpdateTiles called again to be drawn. If nothing else calls
set_needs_update_draw_properties, then everythiing just gets stuck.

So add a set_needs_update_draw_properties after
LTHI::ReleaseTileResources. And add a test that would have failed
without the fix.

Bug: 740544
Change-Id: Ifd2027e17dc0285054ae3b038c6808d94eafba50